--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,7 +4,7 @@
 {% block content%}
 <div class="container">
 		<!-- Business News Section  -->
-        <h3> Top Business News Sources</h3>
+        <h3> Top Business News </h3>
         <hr>
 
         {{ macro.displaySourceList(sources)}}
