--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,7 +9,7 @@
 
         {{ macro.displaySourceList(sources)}}
 
-        <!-- Business News Section  -->
+        <!-- Technology News Section  -->
          
         <h3> Top Technology News Sources</h3>
         <hr>
@@ -23,7 +23,7 @@
 
         {{ macro.displaySourceList(entertainment_sources)}}
 
-        <!-- Entertainment News Section  -->
+        <!-- Sports News Section  -->
          
         <h3> Top Sports News Sources</h3>
         <hr>
